adding Less support to the build process

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -7,8 +7,9 @@
 }
 
 #header {
-  .rounded-corners;
+    .rounded-corners;
+    color: @black;
 }
 #footer {
-  .rounded-corners(10px);
+    .rounded-corners(10px);
 }
