adding some more methods

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -13,3 +13,19 @@
 #footer {
     .rounded-corners(10px);
 }
+
+.bttrmultiselect{
+    
+}
+
+.bttrmultiselect-inner{
+    
+}
+
+.bttrmultiselect .bttrmultiselect-group{
+    
+}
+
+.bttrmultiselect .bttrmultiselect-option{
+    
+}
