--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,1 +1,9 @@
 @black: #000;
+
+.rounded-corners (@radius: 5px) {
+  -webkit-border-radius: @radius;
+  -moz-border-radius: @radius;
+  -ms-border-radius: @radius;
+  -o-border-radius: @radius;
+  border-radius: @radius;
+}
