--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,6 @@
 @black: #000;
-
+@grey: #CCC;
+@buttonHeight: 25px;
 .rounded-corners (@radius: 5px) {
   -webkit-border-radius: @radius;
   -moz-border-radius: @radius;
