--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,6 +1,7 @@
 @black: #000;
 @grey: #CCC;
 @buttonHeight: 25px;
+@selector-min-height: 200px;
 .rounded-corners (@radius: 5px) {
   -webkit-border-radius: @radius;
   -moz-border-radius: @radius;
