--- a/bttrmultiselect/css/bttrmultiselect.css
+++ b/bttrmultiselect/css/bttrmultiselect.css
@@ -7,7 +7,7 @@
   background-color: #cccccc;
   display: inline-block;
 }
-button.bttrmultiselect {
+.bttrmultiselect a.bttrmultiselect-button {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -15,7 +15,7 @@ button.bttrmultiselect {
   border-radius: 5px;
   height: 25px;
 }
-div.bttrmultiselect {
+.bttrmultiselect div.bttrmultiselect-content {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
@@ -24,4 +24,26 @@ div.bttrmultiselect {
   position: absolute;
   height: 200px;
   overflow: auto;
+  visibility: hidden;
+  margin-top: 30px;
+  opacity: 0;
+  -webkit-transform: scale(0.8);
+  -moz-transform: scale(0.8);
+  -ms-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  transform: scale(0.8);
+  -webkit-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -moz-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -ms-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -o-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+bttrmultiselect.on div.bttrmultiselect-content {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
 }
