--- a/bttrmultiselect/css/bttrmultiselect.css
+++ b/bttrmultiselect/css/bttrmultiselect.css
@@ -7,25 +7,30 @@
   background-color: #cccccc;
   display: inline-block;
 }
-.bttrmultiselect a.bttrmultiselect-button {
+.bttrmultiselect .bttrmultiselect-inner {
+  position: relative;
+}
+.bttrmultiselect .bttrmultiselect-button {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
   height: 25px;
+  border: 1px solid #333;
+  display: block;
+  width: 100%;
 }
-.bttrmultiselect div.bttrmultiselect-content {
+.bttrmultiselect .bttrmultiselect-content {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px;
   position: absolute;
-  height: 200px;
-  overflow: auto;
   visibility: hidden;
-  margin-top: 30px;
+  margin-top: -1px;
+  width: 100%;
   opacity: 0;
   -webkit-transform: scale(0.8);
   -moz-transform: scale(0.8);
@@ -38,7 +43,29 @@
   -o-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
   transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
-bttrmultiselect.on div.bttrmultiselect-content {
+.bttrmultiselect .bttrmultiselect-search,
+.bttrmultiselect .bttrmultiselect-list {
+  padding: 0px 5px;
+}
+.bttrmultiselect .bttrmultiselect-list {
+  height: 200px;
+  overflow: auto;
+  cursor: pointer;
+  margin: 0px;
+}
+.bttrmultiselect .bttr-group.bttr-group-disabled,
+.bttrmultiselect .bttr-option.bttr-option-disabled {
+  color: #333;
+  background-color: #CCC;
+  cursor: default;
+}
+.bttrmultiselect .bttr-option {
+  padding: 5px 20px;
+}
+.bttrmultiselect .bttr-group {
+  padding: 5px 10px;
+}
+.bttrmultiselect.on div.bttrmultiselect-content {
   visibility: visible;
   opacity: 1;
   -webkit-transform: scale(1);
