--- a/src/less/style.less
+++ b/src/less/style.less
@@ -47,6 +47,18 @@
 
     }
 
+	.bttr-group .bttr-group-label{
+		a{
+			float: right;
+			text-decoration: none;
+			color: #333;
+		}
+		input{
+			float: right;
+		}
+	}
+
+
     .bttr-group.bttr-group-disabled,
     .bttr-option.bttr-option-disabled{
 	color: #333;
