--- a/bttrmultiselect/css/bttrmultiselect.css
+++ b/bttrmultiselect/css/bttrmultiselect.css
@@ -53,6 +53,14 @@
   cursor: pointer;
   margin: 0px;
 }
+.bttrmultiselect .bttr-group .bttr-group-label a {
+  float: right;
+  text-decoration: none;
+  color: #333;
+}
+.bttrmultiselect .bttr-group .bttr-group-label input {
+  float: right;
+}
 .bttrmultiselect .bttr-group.bttr-group-disabled,
 .bttrmultiselect .bttr-option.bttr-option-disabled {
   color: #333;
