--- a/src/less/style.less
+++ b/src/less/style.less
@@ -47,6 +47,16 @@
 
     }
 
+	.bttr-group:hover,
+    .bttr-option:hover{
+		background-color: #CCC;
+    }
+
+	ul.bttr-options{
+		padding-left: 10px;
+		list-style-type: none;
+	}
+
 	.bttr-group .bttr-group-label{
 		a{
 			float: right;
