--- a/bttrmultiselect/css/bttrmultiselect.css
+++ b/bttrmultiselect/css/bttrmultiselect.css
@@ -32,16 +32,11 @@
   margin-top: -1px;
   width: 100%;
   opacity: 0;
-  -webkit-transform: scale(0.8);
-  -moz-transform: scale(0.8);
-  -ms-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  transform: scale(0.8);
-  -webkit-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -moz-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -ms-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -o-transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  transition: 0.3s all cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -webkit-transition: linear 0.1s;
+  -moz-transition: linear 0.1s;
+  -ms-transition: linear 0.1s;
+  -o-transition: linear 0.1s;
+  transition: linear 0.1s;
 }
 .bttrmultiselect .bttrmultiselect-search,
 .bttrmultiselect .bttrmultiselect-list {
@@ -75,6 +70,10 @@
   background-color: #CCC;
   cursor: default;
 }
+.bttrmultiselect .bttr-group.bttr-group-selected,
+.bttrmultiselect .bttr-option.bttr-option-selected {
+  display: none;
+}
 .bttrmultiselect .bttr-option {
   padding: 5px 20px;
 }
@@ -84,11 +83,6 @@
 .bttrmultiselect.on div.bttrmultiselect-content {
   visibility: visible;
   opacity: 1;
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transform: scale(1);
 }
 /*!
  *  Font Awesome 3.1.0
